--- a/Lillekauplus/Content/Site.css
+++ b/Lillekauplus/Content/Site.css
@@ -1,43 +1,24 @@
 ﻿body {
-    font-size: 13px;
-    font-family: Verdana, Arial, Helvetica, Sans-Serif;
-    background-color: #f7f7fa;
-    padding-left: 40px;
+    padding-top: 50px;
+    padding-bottom: 20px;
 }
 
-nav {
-    display: block;
+/* Set padding to keep content from hitting the edges */
+.body-content {
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
-.menu {
-    padding-left: 10px;
+/* Override the default bootstrap behavior where horizontal description lists 
+   will truncate terms that are too long to fit in the left column 
+*/
+.dl-horizontal dt {
+    white-space: normal;
 }
 
-    .menu ul {
-        list-style: none;
-    }
-
-    .menu li {
-        display: inline;
-    }
-
-    .menu a:hover {
-        color: red;
-    }
-
-table {
-    vertical-align: middle;
-    text-align: left;
-}
-
-.header {
-    font-weight: bold;
-}
-
-td {
-    padding-right: 10px;
-}
-
-input {
-    width: 150px;
+/* Set width on the form input elements since they're 100% wide by default */
+input,
+select,
+textarea {
+    max-width: 280px;
 }
