--- a/Lillekauplus/Views/Home/Buy.cshtml
+++ b/Lillekauplus/Views/Home/Buy.cshtml
@@ -1,21 +1,52 @@
-﻿@{ 
-    ViewBag.Title = "Покупка цветов";
+﻿@model Lillekauplus.Models.Purchase
+
+@{
+    ViewBag.Title = "Покупка книги";
 }
 
 <div>
-    <h3>Форма оформления покупки</h3>
-    <form method="post">
-        <input type="hidden" value="@ViewBag.LilledId" name="LilledId" />
-        <table>
-            <tr>
-                <td><p>Введите свое имя</p></td>
-                <td><input type="text" name="Person" /> </td>
-            </tr>
-            <tr>
-                <td><p>Введите адресс :</p></td>
-                <td><input type="text" name="Address" /> </td>
-            </tr>
-            <tr><td><input type="submit" value="Отправить" /> </td><td></td></tr>
-        </table>
+    <h2>Форма оформления покупки</h2><hr />
+    <form method="post" class="form-horizontal">
+        @using (Html.BeginForm())
+        {
+            <input type="hidden" name="BookId" value="@ViewBag.BookId" />
+            @Html.ValidationSummary()
+            <div class="form-group">
+                <p><b>Ваше имя:</b></p>
+                <div class="col-md-10">
+                    @Html.TextBoxFor(x => x.Person, new { @class = "form-control" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <p><b>Ваш адрес:</b></p>
+                <div class="col-md-10">
+                    @Html.TextBoxFor(x => x.Email, new { @class = "form-control" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <p><b>Ваш телефон:</b></p>
+                <div class="col-md-10">
+                    @Html.TextBoxFor(x => x.Phone, new { @class = "form-control" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <p><b>У вас есть карта клиента?</b></p>
+                <div class="col-md-10">
+                    @Html.DropDownListFor(x => x.Card, new[] {
+                        new SelectListItem() { Text = "Да, у меня есть карта клиента", Value = bool.TrueString },
+                        new SelectListItem() { Text = "К сожалению нету", Value = bool.FalseString }
+                    },
+                    new { @class = "form-control" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Подтвердить покупку" class="btn btn-success" />
+            </div>
+        }
     </form>
 </div>
+
