--- a/Lillekauplus/Views/Home/CreateLilled.cshtml
+++ b/Lillekauplus/Views/Home/CreateLilled.cshtml
@@ -1,51 +1,39 @@
 ﻿@model Lillekauplus.Models.Lilled
-
 @{
-    ViewBag.Title = "CreateLilled";
+    ViewBag.Title = "Добавить книгу";
 }
 
-<h2>CreateBook</h2>
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
+<h2>Добавить товар</h2>
+<form method="post" enctype="multipart/form-data">
+    <hr />
     <div class="form-horizontal">
-        <h4>Lilled</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary()
         <div class="form-group">
-            @Html.LabelFor(model => model.Nimetus, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p><b>Название товара</b></p>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Nimetus, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nimetus, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(x => x.Nimetus, new { @class = "form-control" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Muuja, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p><b>Продавец</b></p>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Muuja, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Muuja, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(x => x.Muuja, new { @class = "form-control" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Hind, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p><b>Цена</b></p>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Hind, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Hind, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(x => x.Hind, new { @class = "form-control" })
             </div>
         </div>
 
+ 
+
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+            <a href="~/Home/Index" class="btn btn-primary">Вернуться назад</a>
+            <input type="submit" value="Добавить товар" class="btn btn-primary" />
         </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+</form>
