--- a/Lillekauplus/Views/Home/DeleteLilled.cshtml
+++ b/Lillekauplus/Views/Home/DeleteLilled.cshtml
@@ -40,9 +40,9 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+    <div class="form-group">
+        <a href="~/Home/Index" class="btn btn-primary">Вернуться назад</a>
+        <input type="submit" value="Удалить" class="btn btn-primary" />
+    </div>
     }
 </div>
