--- a/Lillekauplus/Views/Home/EditLilled.cshtml
+++ b/Lillekauplus/Views/Home/EditLilled.cshtml
@@ -1,23 +1,20 @@
 ﻿@model Lillekauplus.Models.Lilled
-
 @{
-    ViewBag.Title = "EditLilled";
+    ViewBag.Title = "Редактор книжки";
 }
+<h2>Редактор книжки</h2>
 
-<h2>EditLilled</h2>
-
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Lilled</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Nimetus, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p><b>Название товара</b></p>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Nimetus, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Nimetus, "", new { @class = "text-danger" })
@@ -25,7 +22,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Muuja, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p><b>Продавец</b></p>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Muuja, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Muuja, "", new { @class = "text-danger" })
@@ -33,21 +30,17 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Hind, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p><b>Цена</b></p>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Hind, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Hind, "", new { @class = "text-danger" })
             </div>
         </div>
 
+
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+            <a href="~/Home/Index" class="btn btn-primary">Вернуться назад</a>
+            <input type="submit" value="Сохранить данные" class="btn btn-primary" />
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
